--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -1,6 +1,10 @@
 name: first
 
-on: push
+on: 
+  push:
+      branches: 
+          - master
+          - develop
 
 jobs:
     job1:
@@ -19,3 +23,12 @@ jobs:
               uses: actions/checkout@v2
             - name: Step two
               run: "Get-ChildItem Env: | Sort-Object Name"
+    depends:
+        name: depends Job
+        needs: [job1, job2]
+        runs-on: ubuntu-latest
+        steps:
+            - name: Step one
+              uses: actions/checkout@v2
+            - name: Step two
+              run: ls
