--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -7,6 +7,22 @@ on:
           - develop
 
 jobs:
+    job4:
+        name: fourth one
+        runs-on: ubuntu-latest
+        steps:
+            - name: Step one
+              uses: actions/checkout@v2
+            - name: Step two
+              run: env | sort
+    job3:
+        name: third
+        runs-on: ubuntu-latest
+        steps:
+            - name: Step one
+              uses: actions/checkout@v2
+            - name: Step two
+              run: env | sort
     job1:
         name: First Job
         runs-on: ubuntu-latest
