--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -1,38 +1,12 @@
 name: first
 
-on: 
-  push:
-      branches: 
-          - master
-          - develop
+# on: 
+#   push:
+#       branches: 
+#           - master
+#           - develop
 
 jobs:
-    job4:
-        name: fourth one
-        runs-on: ubuntu-latest
-        steps:
-            - name: Step one
-              uses: actions/checkout@v2
-            - name: Step two
-              run: env | sort
-    job3:
-        name: third
-        runs-on: ubuntu-latest
-        steps:
-            - name: Step one
-              uses: actions/checkout@v2
-            - name: Step two
-              run: env | sort
-
-    independentJobTwo:
-        name: Independent Job two
-        runs-on: ubuntu-latest
-        steps:
-            - name: Step one
-              uses: actions/checkout@v2
-            - name: Step two
-              run: env
-
     job1:
         name: First Job
         runs-on: ubuntu-latest
@@ -49,35 +23,9 @@ jobs:
               uses: actions/checkout@v2
             - name: Step two
               run: "Get-ChildItem Env: | Sort-Object Name"
-    independentJob:
-        name: independent Job one
-        runs-on: windows-latest
-        steps:
-            - name: Step one
-              uses: actions/checkout@v2
-            - name: Step two
-              run: "Get-ChildItem Env: | Sort-Object Name"
     depends:
         name: depends first and second
         needs: [job1, job2]
-        runs-on: ubuntu-latest
-        steps:
-            - name: Step one
-              uses: actions/checkout@v2
-            - name: Step two
-              run: ls
-    dependtwo:
-        name: depends on one and third
-        needs: [job1, job3]
-        runs-on: ubuntu-latest
-        steps:
-            - name: Step one
-              uses: actions/checkout@v2
-            - name: Step two
-              run: ls
-    dependthree:
-        name: depends on three and four
-        needs: [job3, job4]
         runs-on: ubuntu-latest
         steps:
             - name: Step one
