--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -1,10 +1,10 @@
 name: first
 
-# on: 
-#   push:
-#       branches: 
-#           - master
-#           - develop
+on: 
+  push:
+      branches: 
+          # - master
+          - develop
 
 jobs:
     job1:
